--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethers": "^5.7.2",
     "framer-motion": "^11.1.7",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
