--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
     "ethers": "^5.7.2",
-    "framer-motion": "^11.1.7",
-    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.4.0",
-    "next": "14.2.3",
     "nodemailer": "^6.9.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.0.4",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
